--- a/package.json
+++ b/package.json
@@ -1,34 +1,22 @@
 {
-  "name": "wimagereadertga",
-  "version": "0.2.71",
-  "description": "___",
-  "author": "Kostiantyn Wandalen <wanalen@01.school>",
-  "license": "MIT",
-  "main": "proto/wtools/Tools.s",
-  "files": [
-    "proto/wtools/___",
-    "proto/wtools/Tools.s",
-    "proto/node_modules"
-  ],
-  "scripts": {
-    "test": "wtest .run proto rapidity:-3",
-    "docgen": "wdocgen .build proto"
+  "name" : "wimagereadertga",
+  "version" : "0.2.72",
+  "description" : "___",
+  "author" : "Kostiantyn Wandalen <wanalen@01.school>",
+  "license" : "MIT",
+  "main" : "/pro/module/wImageReaderTga/proto/node_modules/wimagereadertga",
+  "files" : [ "proto/wtools/___", "proto/wtools/Tools.s", "proto/node_modules" ],
+  "scripts" : { "test" : "wtest .run proto rapidity:-3", "docgen" : "wdocgen .build proto" },
+  "repository" :
+  {
+    "type" : "git",
+    "url" : "https://github.com/Wandalen/wImageReaderTga.git"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Wandalen/wImageReaderTga.git"
+  "bugs" :
+  {
+    "url" : "https://github.com/Wandalen/wImageReaderTga/issues"
   },
-  "bugs": {
-    "url": "https://github.com/Wandalen/wImageReaderTga/issues"
-  },
-  "dependencies": {
-    "wTools": "delta"
-  },
-  "devDependencies": {
-    "eslint": "7.1.0",
-    "wTesting": "delta"
-  },
-  "keywords": [
-    "wTools"
-  ]
+  "dependencies" : { "wTools" : "delta" },
+  "devDependencies" : { "eslint" : "7.1.0", "wTesting" : "delta" },
+  "keywords" : [ "wTools" ]
 }
